--- a/web/src/index.html
+++ b/web/src/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://library.lan:8080/api';
+        const API_URL = 'http://localhost:8080/api';
 
         async function fetchBooks() {
             try {
