--- a/web/src/index.html
+++ b/web/src/index.html
@@ -24,6 +24,7 @@
     </div>
 
     <script>
+        <!-- TODO change for production deployment (i.e. library.lan in demo)-->
         const API_URL = 'http://localhost:8080/api';
 
         async function fetchBooks() {
