--- a/web/src/index.html
+++ b/web/src/index.html
@@ -25,7 +25,7 @@
 
     <script>
         <!-- TODO change for production deployment (i.e. library.lan in demo)-->
-        const API_URL = 'http://localhost:8080/api';
+        const API_URL = 'http://pi1.lan:8080/api';
 
         async function fetchBooks() {
             try {
