--- a/web/src/index.html
+++ b/web/src/index.html
@@ -24,8 +24,7 @@
     </div>
 
     <script>
-        <!-- TODO change for production deployment (i.e. library.lan in demo)-->
-        const API_URL = 'http://pi1.lan:8080/api';
+        const API_URL = '/api';
 
         async function fetchBooks() {
             try {
